RhaptosSword-2.1
  - oerpub m4 release (lenses mostly)

RhaptosSword-2.0
  - Use rhaptos.swordservice.plone to provide the sword functionality
  - Support sword version 2.0
  - This product now only provides the required adapters needed by
    rhaptos.swordservice.plone.

RhaptosSword-1.1
  -  extending sword import: more atompub support

RhaptosSword-1.0
  - initial release: word import only
