@@ -1,3 +1,6 @@
+RhaptosSword-2.2
+  - remove group members from service doc, potential performance fix
+
 RhaptosSword-2.1
   - oerpub m4 release (lenses mostly)
 
